--- a/source/sass/global/reboot.scss
+++ b/source/sass/global/reboot.scss
@@ -22,8 +22,8 @@ body {
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
-  font-family: $font-family--placeholder;
-  color: $color-default-black;
+  font-family: $font-family--pt-root-ui;
+  color: $color-midnight-express;
 
   background-color: $color-default-white;
 
