--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -10,16 +10,25 @@ $color-transparent:               rgba(255, 255, 255, 0);
 
 // Base
 
-$color-blue:                      #2c39f2;
+$color-midnight-express:          #0b1739;
+
+$color-medium-sea-green:          #3eb57c;
+$color-chinook:                   #95d0a1;
+$color-celadon:                   #aee4b2;
 
 // Gradient
 
 $black-to-right:                    linear-gradient(90deg, rgba(0, 0, 0, 0.75) 0%, rgba(0, 0, 0, 0) 75%);
+$gradient-filter:                   linear-gradient(
+                                      135deg,
+                                      rgba($color-celadon, 0.3) 0%,
+                                      rgba($color-chinook, 0.3) 100%
+                                    );
 
 // Typography
 //---------------------------------
 
-$font-family--placeholder:          "", "Arial", sans-serif;
+$font-family--pt-root-ui:          "PT Root UI", "Arial", sans-serif;
 
 // https://www.artlebedev.ru/kovodstvo/sections/159/
 $font-family--rouble:               "Rouble", "Arial", sans-serif;
@@ -33,13 +42,8 @@ $trans--600:                        0.6s cubic-bezier(0.55, 0, 0.1, 1);
 // Viewports
 //---------------------------------
 
-$vp--320:                           320px;
-$vp--375:                           375px;
-$vp--768:                           768px;
-$vp--1024:                          1024px;
-$vp--1280:                          1280px;
-$vp--1440:                          1440px;
-$vp--1920:                          1920px;
+$vp--960:                          960px;
+$vp--1388:                          1388px;
 
 // Retina
 //---------------------------------
