--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -6,76 +6,38 @@
 
 // Desktop first
 
-@mixin vp--1919 {
-  @media (max-width: $vp--1920 - 1) {
+@mixin vp--1387 {
+  @media (max-width: $vp--1388 - 1) {
     @content;
   }
 }
 
-@mixin vp--1439 {
-  @media (max-width: $vp--1440 - 1) {
+@mixin vp--959 {
+  @media (max-width: $vp--960 - 1) {
     @content;
   }
 }
 
-@mixin vp--1279 {
-  @media (max-width: $vp--1280 - 1) {
-    @content;
-  }
+// Reset
+
+@mixin reset-list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
-@mixin vp--1023 {
-  @media (max-width: $vp--1024 - 1) {
-    @content;
+@mixin reset-btn {
+  padding: 0;
+  font-family: inherit;
+  font-weight: inherit;
+  font-size: inherit;
+  line-height: inherit;
+  color: inherit;
+  background-color: $color-transparent;
+  border: none;
+  outline: none;
+
+  &:not(:disabled) {
+    cursor: pointer;
   }
 }
-
-@mixin vp--767 {
-  @media (max-width: $vp--768 - 1) {
-    @content;
-  }
-}
-
-@mixin vp--374 {
-  @media (max-width: $vp--375 - 1) {
-    @content;
-  }
-}
-
-// Mobile first
-
-// @mixin vp--375 {
-//   @media (min-width: $vp--375) {
-//     @content;
-//   }
-// }
-
-// @mixin vp--768 {
-//   @media (min-width: $vp--768) {
-//     @content;
-//   }
-// }
-
-// @mixin vp--1024 {
-//   @media (min-width: $vp--1024) {
-//     @content;
-//   }
-// }
-
-// @mixin vp--1280 {
-//   @media (min-width: $vp--1280) {
-//     @content;
-//   }
-// }
-
-// @mixin vp--1440 {
-//   @media (min-width: $vp--1440) {
-//     @content;
-//   }
-// }
-
-// @mixin vp--1920 {
-//   @media (min-width: $vp--1920) {
-//     @content;
-//   }
-// }
