Добавляет список квартир и рендеринг карточек квартир

--- a/source/pug/base/mixins.pug
+++ b/source/pug/base/mixins.pug
@@ -12,7 +12,13 @@ include ../mixins/basic/picture
 include ../mixins/modals/modal-feedback
 include ../mixins/modals/modal-success
 
+//- Шаблоны
+//- ---------------------------------
+
+include ../mixins/templates/apartment-card
+
 //- Компоненты
 //- ---------------------------------
 
 include ../mixins/components/search-filter
+include ../mixins/components/sort-bar
