--- a/source/pug/pages/index.pug
+++ b/source/pug/pages/index.pug
@@ -20,13 +20,10 @@ block main
           h2.apartment-search__title Квартиры
           .search-result
             .search-result__sort-bar
+              +sort-bar
             ul.search-result__list
-              li.search-result__item
-                .flat-card fhghghgh
-              li.search-result__item
-                .flat-card fhghghgh
-              li.search-result__item
-                .flat-card fhghghgh
-              li.search-result__item
-                .flat-card fhghghgh
+
 block modals
+
+block templates
+  +apartment-card
