Добавляет загрузку данных и делает фильтр интерактивным

--- a/source/pug/base/mixins.pug
+++ b/source/pug/base/mixins.pug
@@ -16,6 +16,7 @@ include ../mixins/modals/modal-success
 //- ---------------------------------
 
 include ../mixins/templates/apartment-card
+include ../mixins/templates/error-request-response
 
 //- Компоненты
 //- ---------------------------------
