Добавляет кнопку (и функционал) "Загрузить еще"

--- a/source/pug/pages/index.pug
+++ b/source/pug/pages/index.pug
@@ -22,6 +22,7 @@ block main
             .search-result__sort-bar
               +sort-bar
             ul.search-result__list
+            button.search-result__load-more-btn(type="button") Загрузить еще
 
 block modals
 
