--- a/source/sass/blocks/search-result.scss
+++ b/source/sass/blocks/search-result.scss
@@ -6,6 +6,10 @@
   @include reset-list;
 
   border-bottom: 1px solid rgba($color-default-black, 0.1);
+
+  &:not(:last-child) {
+    margin-bottom: 48px;
+  }
 }
 
 .search-result__item {
@@ -13,5 +17,32 @@
 
   &:not(:last-child) {
     margin-bottom: 8px;
+  }
+}
+
+.search-result__load-more-btn {
+  @include reset-btn;
+
+  padding: 7px 23px;
+
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+
+  border: 1px solid rgba($color-midnight-express, 0.2);
+  border-radius: 20px;
+
+  transition:
+    color $trans--300,
+    border-color $trans--300;
+
+  &:not(:disabled):hover,
+  &:focus {
+    color: $color-medium-sea-green;
+    border-color: $color-medium-sea-green;
+  }
+
+  &.hidden {
+    display: none;
   }
 }
