--- a/source/pug/mixins/components/sort-bar.pug
+++ b/source/pug/mixins/components/sort-bar.pug
@@ -4,19 +4,19 @@ mixin sort-bar
       li.sort-bar__item.sort-bar__item--layout Планировка
       li.sort-bar__item.sort-bar__item--apartment Квартира
       li.sort-bar__item.sort-bar__item--btn
-        button.sort-bar__btn(type="button")
+        button.sort-bar__btn(type="button" data-sort-type="square" data-sort-direction="direct")
           span S, м²
           .sort-bar__btn-icons
             +icon("icon-shevron", 7 ,4).sort-bar__btn-icon.sort-bar__btn-icon--direct
             +icon("icon-shevron", 7 ,4).sort-bar__btn-icon.sort-bar__btn-icon--reverse
       li.sort-bar__item.sort-bar__item--btn
-        button.sort-bar__btn(type="button")
+        button.sort-bar__btn(type="button" data-sort-type="floor" data-sort-direction="direct")
           span Этаж
           .sort-bar__btn-icons
             +icon("icon-shevron", 7 ,4).sort-bar__btn-icon.sort-bar__btn-icon--direct
             +icon("icon-shevron", 7 ,4).sort-bar__btn-icon.sort-bar__btn-icon--reverse
       li.sort-bar__item.sort-bar__item--btn
-        button.sort-bar__btn.current(type="button" data-sort-direction="direct")
+        button.sort-bar__btn.current(type="button" data-sort-type="price" data-sort-direction="direct")
           span Цена, ₽
           .sort-bar__btn-icons
             +icon("icon-shevron", 7 ,4).sort-bar__btn-icon.sort-bar__btn-icon--direct
