Добавляет кнопку возврата к началу страницы

--- a/source/pug/pages/index.pug
+++ b/source/pug/pages/index.pug
@@ -23,6 +23,8 @@ block main
               +sort-bar
             ul.search-result__list
             button.search-result__load-more-btn(type="button") Загрузить еще
+        button.apartment-search__scroll-up-btn.hidden(type="button" aria-label="Наверх")
+          +icon("icon-arrow", 10, 16)
 
 block modals
 
