--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -6,14 +6,32 @@
 
 // Desktop first
 
+@mixin vp--1439 {
+  @media (max-width: $vp--1440 - 1) {
+    @content;
+  }
+}
+
 @mixin vp--1387 {
   @media (max-width: $vp--1388 - 1) {
     @content;
   }
 }
 
+@mixin vp--1199 {
+  @media (max-width: $vp--1200 - 1) {
+    @content;
+  }
+}
+
 @mixin vp--959 {
   @media (max-width: $vp--960 - 1) {
+    @content;
+  }
+}
+
+@mixin vp--599 {
+  @media (max-width: $vp--600 - 1) {
     @content;
   }
 }
