--- a/source/pug/mixins/components/sort-bar.pug
+++ b/source/pug/mixins/components/sort-bar.pug
@@ -6,18 +6,24 @@ mixin sort-bar
       li.sort-bar__item.sort-bar__item--btn
         button.sort-bar__btn(type="button" data-sort-type="square" data-sort-direction="direct")
           span S, м²
-          .sort-bar__btn-icons
+          span.sort-bar__btn-icons
             +icon("icon-shevron", 7 ,4).sort-bar__btn-icon.sort-bar__btn-icon--direct
             +icon("icon-shevron", 7 ,4).sort-bar__btn-icon.sort-bar__btn-icon--reverse
       li.sort-bar__item.sort-bar__item--btn
         button.sort-bar__btn(type="button" data-sort-type="floor" data-sort-direction="direct")
           span Этаж
-          .sort-bar__btn-icons
+          span.sort-bar__btn-icons
+            +icon("icon-shevron", 7 ,4).sort-bar__btn-icon.sort-bar__btn-icon--direct
+            +icon("icon-shevron", 7 ,4).sort-bar__btn-icon.sort-bar__btn-icon--reverse
+      li.sort-bar__item.sort-bar__item--hand-over.sort-bar__item--btn
+        button.sort-bar__btn(type="button" data-sort-type="handOver" data-sort-direction="direct" disabled)
+          span Сдача
+          span.sort-bar__btn-icons
             +icon("icon-shevron", 7 ,4).sort-bar__btn-icon.sort-bar__btn-icon--direct
             +icon("icon-shevron", 7 ,4).sort-bar__btn-icon.sort-bar__btn-icon--reverse
       li.sort-bar__item.sort-bar__item--btn
         button.sort-bar__btn.current(type="button" data-sort-type="price" data-sort-direction="direct")
           span Цена, ₽
-          .sort-bar__btn-icons
+          span.sort-bar__btn-icons
             +icon("icon-shevron", 7 ,4).sort-bar__btn-icon.sort-bar__btn-icon--direct
             +icon("icon-shevron", 7 ,4).sort-bar__btn-icon.sort-bar__btn-icon--reverse
