--- a/source/pug/mixins/templates/apartment-card.pug
+++ b/source/pug/mixins/templates/apartment-card.pug
@@ -3,7 +3,9 @@ mixin apartment-card
     .apartment-card
       .apartment-card__img
         img(src="#" width="80" height="80" alt="")
-      .apartment-card__title
-      .apartment-card__square
-      .apartment-card__floor
-      .apartment-card__price
+      .apartment-card__info
+        .apartment-card__title
+        .apartment-card__details
+          .apartment-card__square
+          .apartment-card__floor
+          .apartment-card__price
