--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -39,8 +39,11 @@ $trans--600:                        0.6s cubic-bezier(0.55, 0, 0.1, 1);
 // Viewports
 //---------------------------------
 
+$vp--600:                           600px;
 $vp--960:                           960px;
+$vp--1200:                          1200px;
 $vp--1388:                          1388px;
+$vp--1440:                          1440px;
 
 // Retina
 //---------------------------------
