--- a/source/pug/base/layout.pug
+++ b/source/pug/base/layout.pug
@@ -4,7 +4,6 @@ include ../base/data
 include ../base/mixins
 include ../base/header
 include ../base/footer
-include ../base/modal
 
 block variables
 
@@ -14,12 +13,12 @@ html(lang="ru")
     meta(charset="utf-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
-    meta(name="description", content="ProjectName — описание")
-    //- генерируйте favicon тут - https://realfavicongenerator.net/
-    //- в подключение фавикон манифеста обязательно добавьте строчки crossorigin="use-credentials"
+    meta(name="description", content="Тестовое задание")
 
-    //- используйте только для шрифта находящегося на первом экране
-    //- link(rel="preload", href="fonts/placeholder.woff2", as="font", crossorigin="anonymous")
+    link(rel="preload", href="/fonts/pt-root-ui-regular.woff2", as="font", crossorigin="anonymous")
+    link(rel="preload", href="/fonts/pt-root-ui-medium.woff2", as="font", crossorigin="anonymous")
+    link(rel="preload", href="/fonts/pt-root-ui-bold.woff2", as="font", crossorigin="anonymous")
+
     link(rel="stylesheet", href="css/style.min.css")
 
   body
@@ -32,8 +31,6 @@ html(lang="ru")
 
       if (hasFooter)
         +footer(footerMods)
-
-    block modals
 
     block templates
 
