--- a/source/pug/base/layout.pug
+++ b/source/pug/base/layout.pug
@@ -15,9 +15,9 @@ html(lang="ru")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     meta(name="description", content="Тестовое задание")
 
-    link(rel="preload", href="/fonts/pt-root-ui-regular.woff2", as="font", crossorigin="anonymous")
-    link(rel="preload", href="/fonts/pt-root-ui-medium.woff2", as="font", crossorigin="anonymous")
-    link(rel="preload", href="/fonts/pt-root-ui-bold.woff2", as="font", crossorigin="anonymous")
+    link(rel="preload", href="fonts/pt-root-ui-regular.woff2", as="font", crossorigin="anonymous")
+    link(rel="preload", href="fonts/pt-root-ui-medium.woff2", as="font", crossorigin="anonymous")
+    link(rel="preload", href="fonts/pt-root-ui-bold.woff2", as="font", crossorigin="anonymous")
 
     link(rel="stylesheet", href="css/style.min.css")
 
